# vsc-tr

./: .gitignore  CMakeLists.txt  README.md  ivpm.yaml  setup.py
.github/workflows/: ci.yml
docs/: FileFormat.md
python/: core.pyx
python/vsc_tr/: core.pxd  core.pyi  decl.pxd
scripts/: build_linux.sh
src/: CMakeLists.txt  Factory.cpp  Factory.h  IVtrReader.h  IVtrWriter.h  Trace.cpp  Trace.h  TraceMemRW.cpp  TraceMemRW.h  TraceMemRWIterator.cpp  TraceMemRWIterator.h  TraceMemRWStream.cpp  TraceMemRWStream.h  TraceMemRWStreamIterator.cpp  TraceMemRWStreamIterator.h  TraceMemTransaction.cpp  TraceMemTransaction.h  TraceMemValIterator.cpp  TraceMemValIterator.h  VtrBlockHeader.cpp  VtrBlockHeader.h  VtrBlockType.h  VtrDataType.h  VtrMemBlockReader.cpp  VtrMemBlockReader.h  VtrMemBlockWriter.cpp  VtrMemBlockWriter.h  VtrStreamDataP.cpp  VtrStreamDataP.h  VtrStreamIterator.cpp  VtrStreamIterator.h  VtrStreamReader.cpp  VtrStreamReader.h  VtrStreamWriter.cpp  VtrStreamWriter.h  VtrTraceDesc.cpp  VtrTraceDesc.h  VtrTraceDescBlock.cpp  VtrTraceDescBlock.h  VtrTraceHeader.h  (+10 more)
src/include/vsc/tr/: FactoryExt.h  IFactory.h  IStream.h  IStreamReader.h  IStreamWriter.h  ITrace.h  ITraceIterator.h  ITraceRW.h  ITraceReader.h  ITraceWriter.h  ITransaction.h
src/include/vsc/tr/sv/: vsc_tr.core  vsc_tr.sv
tests/unit/: test_base.py  test_mem_trace.py
